5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1716_2503.log
== TEST (2019-05-14 17:59:09) 
-- CODE:
n = int(input('digite um numero: '))
pi = 0
while(n >= 1):
	if((n%2)==1):
		pi = pi +(4/(2*n-1))
	else:
		pi = pi -(4/(2*n-1))
   n = n-1
print(round(pi , 8))
-- ERROR:
File "XXXX", line 8
    n = n-1
          ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:59:19) 
-- CODE:
n = int(input('digite um numero: '))
pi = 0
while(n >= 1):
	if((n%2)==1):
		pi = pi +(4/(2*n-1))
	else:
		pi = pi -(4/(2*n-1))
		n = n-1
print(round(pi , 8))
-- ERROR:
File "XXXX", line 8
    n = n-1
          ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:59:32) 
-- CODE:
n = int(input('digite um numero: '))
pi = 0
while(n >= 1):
	if((n%2)==1):
		pi = pi +(4/(2*n-1))
	else:
		pi = pi -(4/(2*n-1))
		n = n-1
print(round(pi,8))
-- ERROR:
File "XXXX", line 8
    n = n-1
          ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:58:28) 
-- CODE:
n = int(input('digite um numero: '))
pi = 0
while(n >= 1):
	if((n%2)==1):
		pi = pi +(4/(2*n-1))
	else:
		pi = pi -(4/(2*n-1))
		n = n-1
print(round(pi,8))
-- ERROR:
File "XXXX", line 8
    n = n-1
          ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:59:27) 
-- CODE:
n = int(input('digite um numero: '))
pi = 0
while(n >= 1):
	if((n%2)==1):
		pi = pi +(4/(2*n-1))
	else:
		pi = pi -(4/(2*n-1))
		n = n-1
print(round(pi,8))
-- ERROR:
File "XXXX", line 8
    n = n-1
          ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:29:36) 
-- CODE:
n = int(input('digite um numero: '))
pi = 0
while(n>=1):
	if((n % 2) == 1)
		pi = pi + (4/(2*n-1))
	else:
		pi = pi - (4/(2*n-1))
		n = n-1
print(round(pi,8))
-- ERROR:
File "XXXX", line 4
    if((n % 2) == 1)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:30:51) 
-- CODE:
n = int(input('digite um numero: '))
pi = 0
while(n>=1):
	if ((n % 2)==1)
		pi = pi + (4/(2*n-1))
	else:
		pi = pi - (4/(2*n-1))
		n = n-1
print(round(pi,8))
-- ERROR:
File "XXXX", line 4
    if ((n % 2)==1)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:31:15) 
-- CODE:
n = int(input('digite um numero: '))
pi = 0
while(n>=1):
	if ((n % 2)==1)
		pi = pi + (4/(2*n-1))
	else:
		pi = pi - (4/(2*n-1))
		n = n-1
print(round(pi,8))
-- ERROR:
File "XXXX", line 4
    if ((n % 2)==1)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:36:02) 
-- CODE:
n = int(input('digite um numero: '))
pi = 0

while( n >= 1):
	if((n % 2) == 1):
		pi = pi + (4/(2*n-1))
	else:
		pi = pi - (4/(2*n-1))
	n = n-1
print(round(pi,8))
	
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:36:17) 
-- CODE:
n = int(input('digite um numero: '))
pi = 0

while( n >= 1):
	if((n % 2) == 1):
		pi = pi + (4/(2*n-1))
	else:
		pi = pi - (4/(2*n-1))
	n = n-1
print(round(pi,8))
	
-- EXECUTION TIME:
0.155412
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
